--- a/pages/enroll.html
+++ b/pages/enroll.html
@@ -33,7 +33,7 @@ background: grey
         <br>
         {% endfor %}
         <a class="btn btn-primary btn-lg"
-          href="{{ site.data.sitetext.enroll.url}}">{{site.data.sitetext.enroll.urlname}}</a>
+          href="{{ site.data.sitetext.enroll.url}}" target="_blank">{{site.data.sitetext.enroll.urlname}}</a>
       </div>
     </div>
   </div>
