--- a/pages/graduates.html
+++ b/pages/graduates.html
@@ -28,7 +28,7 @@ background: grey
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
                 {% if person.blog %}
-                <h4 class="alumni-title"><a href="{{person.blog}}" style="color:rgb(95, 94, 93);text-decoration: underline;">
+                <h4 class="alumni-title"><a href="{{person.blog}}" style="color:rgb(95, 94, 93);text-decoration: underline;" target="_blank">
                   {{ person.title }}</a></h4>
                 {% else %}
                 <h4 class="alumni-title">{{ person.title }}</h4>
