--- a/pages/publication.html
+++ b/pages/publication.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "发表论文"
+title: "出版著作"
 background: grey
 ---
 <style type="text/css">
@@ -35,18 +35,18 @@ background: grey
   }
 </style>
 
-<section class="page-section"> 
-  <!-- 发表论文 -->
+<section class="page-section">
+  <!-- 发行教材 -->
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.paper.title | default: "Paper" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext.paper.text | default: "" }}</h3>
+        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.textbook.title | default: "Textbook" }}</h2>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext.textbook.text | default: "" }}</h3>
       </div>
     </div>
     <!-- Content -->
     <article>
-      {% for paper in site.data.sitetext.paper.item %}
+      {% for paper in site.data.sitetext.textbook.item %}
       {% if paper.download %}
       <h3 class="paperinfo paperinfotitle"><a href="{{ site.baseurl }}{{paper.url}}" download="{{paper.download}}"
           style="color:rgb(86,174,200);">{{paper.title}}</a></h3>
