--- a/pages/paper.html
+++ b/pages/paper.html
@@ -53,8 +53,7 @@ background: grey
       <p class="paperinfo paperinfoname">{{paper.name}}</p>
       <p class="paperinfo paperinfoagency">{{paper.source}}</p>
       {% else %}
-      <h3 class="paperinfo paperinfotitle"><a href="{{paper.url}}" style="color:rgb(86,174,200); "
-          target="_blank">{{paper.title}}</a></h3>
+      <h3 class="paperinfo paperinfotitle">{{paper.title}}</h3>
       <p class="paperinfo paperinfoname">{{paper.name}}</p>
       <p class="paperinfo paperinfoagency">{{paper.source}}</p>
       {% endif %}
