--- a/pages/research.html
+++ b/pages/research.html
@@ -208,7 +208,7 @@ background: grey
   
         <!-- item -->
         {% assign count = count | plus: 1 %}
-        <td class="col-sm-6 text-center">
+        <td class="col-sm-6">
           <h3 class="paperinfo paperinfotitle">{{count}}. {{research.title}}</h3>
           <p class="paperinfo paperinfoname">{{research.source}}</p>
           <p class="paperinfo paperinfoagency">{{research.period}}</p>
